# Spineloft

./: PLANNING.md  README.md  SUIVI.md  d2.cpp  d2.hpp
Poster/Commentaires/: Propositions
blender_addon/: Test.py  __init__.py  custom_editor.py  d2.py  debug.py  first_addon.py  gen_vol.py  intersect.py  libSpineLoft.dylib  module_installer.py  register_script.py  tool.py  ui.py
test_d2/: Makefile  d2.cpp  stroke.txt  stroking.py
test_d2gradient/: CMakeCache.txt  CMakeLists.txt  Makefile  SpineLoft  cmake_install.cmake  main.cpp  stroke.txt  stroking.py
test_intersect/: CMakeCache.txt  CMakeLists.txt  Makefile  Vec2.h  arc_stroke.txt  arc_stroking.py  canvy  canvy.cpp  cmake_install.cmake  d2.cpp  external.hpp  intersect  intersect.cpp  stroke.txt  stroking.py
test_intersect_python/: arc_stroke.txt  arc_stroking.py  blurWOPil.py  contour_detection.py  d2.py  intersect.py  test.py  test2.py
v1/: CMakeLists.txt  compileLib.sh  interface.h  intersect.cpp  libSpineLoft.dylib  main.py
